new proj/src/objects/GE_OG_Contact_Spec_Info__c.object
<CustomObject>
    <description>Used to store Contact Specific Information as Related list</description>
    <fields>
        <fullName>GE_OG_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contact Specific Information</relationshipLabel>
        <relationshipName>Contact_Specific_Information</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_OG_Prmry_Cntct__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_OG_Promotion__c</fullName>
        <label>Promotion</label>
        <picklist>
            <picklistValues>
                <fullName>Invite - African American Forum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invite - Womens Network</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invite - Minds &amp; Machines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invite - City Swings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invite - CEO Roundtable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invite - M&amp;C Customer Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invite - GE Customer Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invite - National Trade Show</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invite - Local Trade Show</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invite - Crotonville</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing - Price/Product Updates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing - Account Primary Contact</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>GE_OG_Tier1_PL__c</fullName>
        <label>Tier 1 P&amp;L</label>
        <picklist>
            <picklistValues>
                <fullName>Oil &amp; Gas (O&amp;G)</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_OG_Tier2_PL__c</fullName>
        <label>Tier 2 P&amp;L</label>
        <picklist>
            <controllingField>GE_OG_Tier1_PL__c</controllingField>
            <picklistValues>
                <fullName>PII Pipeline Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Measurement &amp; Control (M&amp;C)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drilling &amp; Surface (D&amp;S)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subsea (SS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DTS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lufkin</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_OG_Tier3_PL__c</fullName>
        <label>Tier 3 P&amp;L</label>
        <picklist>
            <controllingField>GE_OG_Tier2_PL__c</controllingField>
            <picklistValues>
                <fullName>Advanced Sensors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bently Nevada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blower &amp; Comp.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Control Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D&amp;S - AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D&amp;S - Drilling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D&amp;S - DT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D&amp;S - Logging</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D&amp;S - PC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DOS-Installation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DOS-New Units</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DOS - Opex Core</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DOS - Opex CS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DOS - Service Multi P&amp;Ls</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DOS - Upgrades</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flow &amp; Process Technologies (Dresser)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Line Inspection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inspection Technologies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Installation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integrity Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Measurement Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Units</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oilfield</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opex - Core</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opex - CS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Power Transmission</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reuter Stokes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salof</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Multi P&amp;Ls</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Contact Specific Information</label>
    <nameField>
        <displayFormat>CSI-{000000}</displayFormat>
        <label>Contact Specific Information Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Specific Information</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>